--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "GPL-2.0",
   "homepage": "http://www.papaya-cms.com/",
   "require": {
-    "papaya/cms-core": ">=6.7.0"
+    "papaya/cms-core": "*"
   },
   "autoload": {
     "classmap": ["./src/"]
